--- a/client/src/components/css/lists.css
+++ b/client/src/components/css/lists.css
@@ -35,6 +35,20 @@
 }
 
 .button-container button {
+  border: none;
+  background-color: #fff;
+  font-size: 2.5vh;
+  font-weight: bold;  
+  
+}
+
+.button-container button:hover {
+  cursor: pointer;
+  background-color: #fff !important;
+  color: #2196f3;
+}
+
+.button-container button {
   margin-right: 10px;
   padding: 8px 12px;
   cursor: pointer;
