--- a/client/src/components/css/lists.css
+++ b/client/src/components/css/lists.css
@@ -7,7 +7,7 @@
 }
 
 .table_list {
-  width: 60%;
+  width: 100vh;
   border-collapse: collapse;
 }
 
@@ -32,14 +32,17 @@
 
 .button-container {
   margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-right: 30vh;
 }
 
 .button-container button {
   border: none;
   background-color: #fff;
   font-size: 2.5vh;
-  font-weight: bold;  
-  
+  font-weight: bold;
 }
 
 .button-container button:hover {
