--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bricolage+Grotesque:opsz@12..96&family=Concert+One&family=Khula:wght@800&family=Oswald&family=Poppins:wght@500&family=Roboto+Mono:wght@500&family=Tilt+Neon&display=swap");
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Mono", sans-serif;
 }
